#4 added hollow heart icon next to each villager's name, restructured css to fix modal showing behind other elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,50 +15,6 @@ h3 {
   color: white;
 }
 
-.modal-background {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-window-container {
-  position: fixed;
-  width: 100%;
-  text-align: center;
-  background-color: #fdfdff;
-}
-
-.modal-window-paper {
-  position: relative;
-  margin: 1rem;
-  border: 0.4rem solid #d8c3ae;
-  border-radius: 0.4rem;
-}
-
-.fa-rectangle-xmark {
-  position: absolute;
-  top: 0.1rem;
-  right: 0.2rem;
-  color: #c4a684;
-  font-size: 2rem;
-}
-
-.icon {
-  max-width: 20%;
-  margin: 0.2rem;
-}
-
-.modal-leaf {
-  position: absolute;
-  left: -1.2rem;
-  bottom: -1rem;
-  width: 20%;
-}
-
 h1 {
   color: #70604a;
   margin-left: 1.4rem;
@@ -98,11 +54,20 @@ ul {
 }
 
 .villager-polaroid {
+  position: relative;
   width: 90%;
   background-color: #ebe3da;
   text-align: center;
   margin: 1rem 0;
   box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.3);
+}
+
+.fa-heart {
+  color: #70604a;
+  font-size: 1.4rem;
+  position: absolute;
+  right: 1.2rem;
+  bottom: 1.2rem;
 }
 
 img {
@@ -129,11 +94,70 @@ p {
   text-decoration: underline;
 }
 
+.modal-background {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.modal-window-container {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  background-color: #fdfdff;
+}
+
+.modal-window-paper {
+  position: relative;
+  margin: 1rem;
+  border: 0.4rem solid #d8c3ae;
+  border-radius: 0.4rem;
+}
+
+.fa-rectangle-xmark {
+  position: absolute;
+  top: 0.1rem;
+  right: 0.2rem;
+  color: #c4a684;
+  font-size: 2rem;
+}
+
+.icon {
+  max-width: 20%;
+  margin: 0.2rem;
+}
+
+.modal-leaf {
+  position: absolute;
+  left: -1.2rem;
+  bottom: -1rem;
+  width: 20%;
+}
+
 .hidden {
   display: none;
 }
 
 @media screen and (min-width: 768px) {
+  h1 {
+    margin-top: 1.4rem;
+    font-size: 2.5rem;
+  }
+
+  input {
+    margin: 0;
+  }
+
+  .fa-heart {
+    font-size: 1.3rem;
+    right: 0.8rem;
+  }
+
   .modal-window-container {
     width: 40%;
   }
@@ -150,14 +174,5 @@ p {
   .modal-leaf {
     width: 18%;
     bottom: -1.3rem;
-  }
-
-  h1 {
-    margin-top: 1.4rem;
-    font-size: 2.5rem;
-  }
-
-  input {
-    margin: 0;
   }
 }
